changedList.of